--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma": "^0.12.24",
-    "grunt-karma": "^0.9.0"
+    "grunt-karma": "^0.9.0",
+    "grunt-build-control": "^0.1.3"
   },
   "engines": {
     "node": ">=0.10.0"
